--- a/golang-build/Dockerfile
+++ b/golang-build/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.11
 
 LABEL "name"="Go Builder"
 LABEL "maintainer"="Dan Sosedoff <dan.sosedoff@gmail.com>"
-LABEL "version"="0.1.0"
+LABEL "version"="0.2.0"
 
 LABEL "com.github.actions.name"="Go Builder"
 LABEL "com.github.actions.description"="Cross-complile Go programs"
@@ -11,7 +11,7 @@ LABEL "com.github.actions.color"="#E0EBF5"
 
 RUN \
   apt-get update && \
-  apt-get install -y ca-certificates openssl curl zip jq && \
+  apt-get install -y ca-certificates openssl zip && \
   update-ca-certificates && \
   rm -rf /var/lib/apt
 
